--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -17,6 +17,7 @@
 
         <link rel="stylesheet" href="{% static 'css/global.css' %}">
         <link rel="stylesheet" href="{% static 'css/menu.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
         <link rel="icon" href="{% static 'img/favicon.png' %}">
 
@@ -38,7 +39,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a id="menu-brand" class="navbar-brand" href="{% url 'post_list' %}"><img
+                    <a id="menu-brand" class="navbar-brand" href="{% url 'post_list' %}"><img id="picloud-logo"
                             src="{% static 'img/piLogo.png' %}" alt="logo"></a>
                 </div>
 
