--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -1,5 +1,6 @@
 body {
     background-color: aliceblue;
+    font-family: 'Roboto Slab', serif;
 }
 
 .content-block {
@@ -29,52 +30,72 @@ body {
     max-width: 250px;
 }
 
-.sign-form {
-    background-color: #f8f8f8;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    text-align: center;
-    max-width: 600px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
-    padding: 20px;
-}
-
-.post-panel {
+.post-panel, .sign-form, .universities, .search-post-panel, .post-edit-panel,
+.message-panel, .password-reset-panel, .mem-panel{
     background-color: #f8f8f8;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     text-align: center;
-    margin: 5px;
+    margin: 5px auto;
 }
 
-.post-panel img {
+.post-panel img, .mem-panel img {
     padding: 5px;
     width: 100%;
 }
 
-.post-panel img.univer-logo {
+.post-edit-panel{
+    padding: 20px;
+}
+
+.sign-form {
+    max-width: 600px;
+    margin-bottom: 20px;
+    padding: 20px;
+}
+
+.mem-panel{
+
+}
+
+.universities {
+    max-width: 600px;
+    margin-bottom: 20px;
+}
+
+img.univer-logo{
+    max-height: 100%;
     max-width: 100%;
-    max-height: 150px;
+    padding: 5px;
+}
+
+.search-panel {
+    background-color: #f8f8f8;
+    box-shadow: 3px 0 10px rgba(0, 0, 0, 0.5);
+    width: 100%;
+    margin: -20px -20px 0 0;
+    padding: 10px;
+}
+
+.search-post-panel {
+    margin: 10px;
+    padding-top: 10px;
+}
+
+.panel-settings {
+    padding: 10px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .message-panel {
-    background-color: #f8f8f8;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    text-align: center;
     margin-bottom: 20px;
     max-width: 600px;
     padding: 10px;
 }
 
 .password-reset-panel {
-    background-color: #f8f8f8;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    text-align: center;
     margin-bottom: 20px;
     width: 600px;
     padding: 10px;
@@ -97,37 +118,6 @@ body {
     -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
     -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-.universities {
-    max-width: 600px;
-    min-height: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
-}
-
-.search-panel {
-    background-color: #f8f8f8;
-    box-shadow: 3px 0 10px rgba(0, 0, 0, 0.5);
-    width: 100%;
-    margin: -20px -20px 0 0;
-    padding: 10px;
-}
-
-.search-post-panel {
-    background-color: #f8f8f8;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-    margin: 10px;
-    padding-top: 10px;
-}
-
-.panel-settings {
-    padding: 10px;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .panel-heading{
@@ -156,5 +146,11 @@ body {
     #search-button{
         padding-left: 0;
     }
+}
+
+textarea {
+    width: 100%;
+    height:150px;
+    resize: none;
 }
 
