--- a/cloud/static/css/menu.css
+++ b/cloud/static/css/menu.css
@@ -1,138 +1,147 @@
-body,html{
+body, html {
     height: 100%;
-  }
+}
 
-  nav.sidebar, .main{
+nav{
+    font-weight: bold;
+    background-color: #1565c0;
+}
+
+nav.sidebar, .main {
     -webkit-transition: margin 200ms ease-out;
-      -moz-transition: margin 200ms ease-out;
-      -o-transition: margin 200ms ease-out;
-      transition: margin 200ms ease-out;
-  }
+    -moz-transition: margin 200ms ease-out;
+    -o-transition: margin 200ms ease-out;
+    transition: margin 200ms ease-out;
+}
 
-  #menu-brand{
-      padding: 0;
-      margin-left: 15px;
-  }
+#picloud-logo {
+    height: 100%;
+}
 
-  #avatar{
-      border-radius: 100%;
-      padding: 5px;
-      width: 75px;
-  }
+#menu-brand {
+    padding: 0;
+    margin-left: 15px;
+}
 
-  .navbar-position {
-      position: relative;
-  }
+#avatar {
+    border-radius: 100%;
+    padding: 5px;
+    width: 75px;
+}
 
-  .navbar{
-      text-align: center;
-  }
+.navbar-position {
+    position: relative;
+}
 
- @media (min-width: 765px) {
+.navbar {
+    text-align: center;
+}
+
+@media (min-width: 765px) {
 
     .navbar-position {
         position: fixed;
     }
 
-    .main{
-      position: absolute;
-      width: calc(100% - 40px);
-      margin-left: 40px;
-      float: right;
+    .main {
+        position: absolute;
+        width: calc(100% - 40px);
+        margin-left: 40px;
+        float: right;
     }
 
-
-    nav.sidebar:hover + .main{
-      margin-left: 200px;
+    nav.sidebar:hover + .main {
+        margin-left: 200px;
     }
 
-    nav.sidebar.navbar.sidebar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
-      margin-left: 0px;
+    nav.sidebar.navbar.sidebar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+        margin-left: 0px;
     }
 
-    nav.sidebar .navbar-brand, nav.sidebar .navbar-header{
-      text-align: center;
-      width: 100%;
-      margin-left: 0px;
+    nav.sidebar .navbar-brand, nav.sidebar .navbar-header {
+        text-align: center;
+        width: 100%;
+        margin-left: 0px;
     }
 
-    nav.sidebar a{
-      padding-right: 13px;
+    nav.sidebar a {
+        padding-right: 13px;
     }
 
-    nav.sidebar .navbar-nav > li:first-child{
-      border-top: 1px #e5e5e5 solid;
+    nav.sidebar .navbar-nav > li:first-child {
+        border-top: 1px #e5e5e5 solid;
     }
 
-    nav.sidebar .navbar-nav > li{
-      border-bottom: 1px #e5e5e5 solid;
+    nav.sidebar .navbar-nav > li {
+        border-bottom: 1px #e5e5e5 solid;
     }
 
     nav.sidebar .navbar-nav .open .dropdown-menu {
-      position: static;
-      float: none;
-      width: auto;
-      margin-top: 0;
-      background-color: transparent;
-      border: 0;
-      -webkit-box-shadow: none;
-      box-shadow: none;
+        position: static;
+        float: none;
+        width: auto;
+        margin-top: 0;
+        background-color: transparent;
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
     }
 
-    nav.sidebar .navbar-collapse, nav.sidebar .container-fluid{
-      padding: 0 0px 0 0px;
+    nav.sidebar .navbar-collapse, nav.sidebar .container-fluid {
+        padding: 0 0px 0 0px;
     }
 
-    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-      color: #777;
+    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+        color: #777;
     }
 
-    nav.sidebar{
-      width: 200px;
-      height: 100%;
-      margin-left: -160px;
-      float: left;
-      margin-bottom: 0px;
+    nav.sidebar {
+        width: 200px;
+        height: 100%;
+        margin-left: -160px;
+        float: left;
+        margin-bottom: 0px;
     }
 
     nav.sidebar li {
-      width: 100%;
+        width: 100%;
     }
 
-    nav.sidebar:hover{
-      margin-left: 0px;
+    nav.sidebar:hover {
+        margin-left: 0px;
     }
 
-    .forAnimate{
-      opacity: 0;
+    .forAnimate {
+        opacity: 0;
     }
-  }
+}
 
-  @media (min-width: 1330px) {
+@media (min-width: 1330px) {
 
-    .main{
-      width: calc(100% - 200px);
-      margin-left: 200px;
-    }
-
-    nav.sidebar{
-      margin-left: 0px;
-      float: left;
+    .main {
+        width: calc(100% - 200px);
+        margin-left: 200px;
     }
 
-    nav.sidebar .forAnimate{
-      opacity: 1;
+    nav.sidebar {
+        margin-left: 0px;
+        float: left;
     }
-  }
 
-  nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
+    nav.sidebar .forAnimate {
+        opacity: 1;
+    }
+}
+
+nav.sidebar .navbar-nav .open .dropdown-menu > li > a:hover, nav.sidebar .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #CCC;
     background-color: transparent;
-  }
+}
 
-  nav:hover .forAnimate{
+nav:hover .forAnimate {
     opacity: 1;
-  }
-  section{
+}
+
+section {
     padding-left: 15px;
-  }
+}
