--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -19,7 +19,7 @@
 
             <div class="col-xs-12 col-sm-12 col-md-1 col-lg-2"></div>
 
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 no-margin-padding">
 
                 <div class="container-fluid sign-form">
 
