--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -10,10 +10,10 @@
 
 {% block content %}
 
-        <div class="container-fluid" style="margin: 0; padding: 0;">
+        <div class="container-fluid no-margin-padding">
             <div class="col-md-3 col-lg-3"></div>
             <div class="col-md-6 col-lg-6">
-                <div class="post-panel" style="padding: 30px">
+                <div class="post-edit-panel">
                     <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
 
