--- a/cloud/templates/memes.html
+++ b/cloud/templates/memes.html
@@ -4,42 +4,44 @@
     Cloud Мемесы
 {% endblock %}
 
-{% block memes_active%}
+{% block memes_active %}
     class="active"
 {% endblock %}
 
 {% block content %}
 
-        <div class="container-fluid no-margin-padding">
+    <div class="container-fluid no-margin-padding">
 
-            <div class="col-xs-12 col-sm-12 col-md-1 col-lg-1"></div>
-        {% for col_feed in colomns_feed%}
+        <div class="col-xs-12 col-sm-12 col-md-1 col-lg-1"></div>
+
+        {% for col_feed in colomns_feed %}
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
 
-                    <table width="100%">
-                        {% for feed in col_feed %}
-                            <tr>
-                                <td>
-                                    <div class="post-panel">
-                                        <div class="mem-title container-fluid">
-                                            <a href="{{ feed.link }}"> <h3>{{ feed.author }}</h3> </a>
-                                            <h5 style="color: #9e9e9e">{{ feed.published }}</h5>
-                                        </div>
-                                        <hr>
-                                        <div class="mem-content">
-                                            {{ feed.summary|safe }}
-                                        </div>
+                <table width="100%">
+                    {% for feed in col_feed %}
+                        <tr>
+                            <td>
+                                <div class="mem-panel">
+                                    <div class="mem-title container-fluid">
+                                        <a href="{{ feed.link }}"><h3>{{ feed.author }}</h3></a>
+                                        <h5 style="color: #9e9e9e">{{ feed.published }}</h5>
                                     </div>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </table>
+                                    <hr>
+                                    <div class="mem-content">
+                                        {{ feed.summary|safe }}
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
 
             </div>
         {% endfor %}
-            <div class="col-xs-12 col-sm-12 col-md-1 col-lg-1"></div>
 
-        </div>
+        <div class="col-xs-12 col-sm-12 col-md-1 col-lg-1"></div>
+
+    </div>
 
 
 {% endblock %}
