--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -13,7 +13,8 @@
     <div class="container-fluid no-margin-padding">
         <div class="col-md-3 col-lg-3"></div>
         <div class="col-md-6 col-lg-6">
-            <div class="post-panel" style="padding: 30px">
+            <div class="post-panel">
+                <hr>
                 <h2> {{ post.title }}</h2>
                 <hr>
                 <p>{{ post.text }}</p>
