--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -4,49 +4,56 @@
     Cloud Редактирование
 {% endblock %}
 
-{% block newpost_active%}
+{% block newpost_active %}
     class="active"
 {% endblock %}
 
 {% block content %}
 
-        <div class="container-fluid no-margin-padding">
-            <div class="col-md-3 col-lg-3"></div>
-            <div class="col-md-6 col-lg-6">
-                <div class="post-edit-panel">
-                    <form method="POST" enctype="multipart/form-data">
-                        {% csrf_token %}
+    <div class="container-fluid no-margin-padding">
+        <div class="col-md-3 col-lg-3"></div>
+        <div class="col-md-6 col-lg-6">
+            <div class="post-edit-panel">
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
 
-                        <div class="django-control">
-                            <label>Предмет!</label>
-                            {{ form.subject }}<hr>
+                    <div class="django-control">
+                        <label>Предмет!</label>
+                        {{ form.subject }}
+                        <hr>
 
-                            <label>Заголовок!</label>
-                            {{ form.title }}<br>
+                        <label>Заголовок!</label>
+                        {{ form.title }}<br>
 
-                            <label>Описание</label>
-                            {{ form.text }}<br>
+                        <label>Описание</label>
+                        {{ form.text }}<br>
 
-                            <label>Тип поста!</label>
-                            {{ form.type }}<hr>
+                        <label>Тип поста!</label>
+                        {{ form.type }}
+                        <hr>
 
-                            <label>Ссылка</label>
-                            {{ form.link }}<br>
-
-                            <div class="container-fluid no-margin-padding">
-                                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"><label>Картинка</label>{{ form.image }}<br></div>
-                                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"><label>Файл</label>{{ form.file }}<br></div>
-                            </div>
-
-                        </div>
+                        <label>Ссылка</label>
+                        {{ form.link }}<br>
 
                         <div class="container-fluid no-margin-padding">
-                            <button type="submit" class="save btn btn-default col-xs-12 col-sm-12 col-md-12 col-lg-12">Сохранить</button>
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                                <label>Картинка</label>{{ form.image }}<br></div>
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"><label>Файл</label>{{ form.file }}<br>
+                            </div>
                         </div>
-                    </form>
-                </div>
+
+                    </div>
+
+                    <div class="container-fluid no-margin-padding">
+                        <button type="submit" class="save btn btn-default col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            Сохранить
+                        </button>
+                    </div>
+                </form>
             </div>
-            <div class="col-md-3 col-lg-3"></div>
         </div>
+        <div class="col-md-3 col-lg-3"></div>
+    </div>
+
 
 {% endblock %}
