--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -39,8 +39,8 @@
         <div id="search_results" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 no-margin-padding">
 
             <div class='search-post-panel' style='padding: 10px;'>
-                Здесь будут отображаться результаты поиска! <br>
-                Введитен ваш запрос!
+                Здесь будут отображаться результаты поиска. <br>
+                Введите ваш запрос
             </div>
 
         </div>
