Сверстаны страницы программ и предметов + расставлены ссылки

--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -41,7 +41,7 @@
                 <table class="table" style="text-align: left">
                     <tr>
                         <th>Предмет:</th>
-                        <td>{{ post.subject.title }}</td>
+                        <td><a href="/subject/{{ post.subject.pk }}">{{ post.subject.title }}</a></td>
                     </tr>
                     <tr>
                         <th>Автор:</th>
@@ -60,18 +60,6 @@
                         <td>{{ post.views }}</td>
                     </tr>
                 </table>
-                 <div class="panel panel-info">
-                     <div class="panel-heading" data-toggle="collapse" href="#programs-panel">Направления обучения</div>
-                     <div id="programs-panel" class="collapse">
-                         <div class="panel-body no-margin-padding">
-                             <div class="list-group">
-                                 {% for program in post.subject.programs.all %}
-                                     <a class="list-group-item" href="#">{{ program.title }}</a>
-                                 {% endfor %}
-                             </div>
-                         </div>
-                     </div>
-                 </div>
 
                 {% if user == post.author or user.is_staff or user.is_superuser %}
                     <a href="{% url 'post_edit' pk=post.pk %}">
