Добавлен robots.txt и директива для yandex Вебмастера

--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -8,6 +8,11 @@
     class="active"
 {% endblock %}
 
+{% block head %}
+    <!-- Аутентификация в Яндекс Вебмастер -->
+    <meta name="yandex-verification" content="c3f40ad459bc9654" />
+{% endblock %}
+
 {% block content %}
 
     <div class="post-list no-margin-padding">
