--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -20,6 +20,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
         <link rel="icon" href="{% static 'img/favicon.png' %}">
+        <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/favicon.png"/>
 
         {% block head %}
         {% endblock %}
