--- a/cloud/templates/structure/program_page.html
+++ b/cloud/templates/structure/program_page.html
@@ -23,8 +23,8 @@
                 {% endif %}
 
                 <h5>
-                    {{ program.chair.short_title }} --
-                    {{ program.chair.department.short_title }} --
+                    {{ program.chair.short_title }} &mdash;
+                    {{ program.chair.department.short_title }} &mdash;
                     {{ program.chair.department.university.short_title }}
                 </h5>
 
@@ -34,13 +34,13 @@
                 {% for semestr in semesters %}
                     <h4> Семестр {{ semestr }}:</h4>
 
-                    {% for subject in subjects %}
-                        {% if  subject.semestr == semestr %}
-                            <a href="/subject/{{ subject.pk }}"><h4>{{ subject.title }}</h4></a>
-                            <h6>Лектор - {{ subject.lecturer }}</h6>
-                        {% endif %}
+                        {% for subject in subjects %}
+                            {% if  subject.semestr == semestr %}
+                                <a href="/subject/{{ subject.pk }}"><h4>{{ subject.title }}</h4></a>
+                                <h6>Лектор - {{ subject.lecturer }}</h6>
+                            {% endif %}
+                        {% endfor %}
 
-                    {% endfor %}
                     <hr>
                 {% endfor %}
 
