--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -1,4 +1,5 @@
 {% extends 'main_template.html' %}
+{% load static %}
 
 {% block title %}
     Cloud Редактирование
@@ -6,6 +7,12 @@
 
 {% block newpost_active %}
     class="active"
+{% endblock %}
+
+{% block head %}
+    <!-- Showdown -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.8.6/showdown.min.js"
+            integrity="sha256-dwhppIrxD8qC6lNulndZgtIm4XBU9zoMd9OUoXzIDAE=" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block content %}
@@ -18,17 +25,14 @@
                     {% csrf_token %}
 
                     <div class="django-control">
-                        <label>Предмет!</label>
+                        <label>Предмет</label>
                         {{ form.subject }}
                         <hr>
 
-                        <label>Заголовок!</label>
+                        <label>Заголовок</label>
                         {{ form.title }}<br>
 
-                        <label>Описание</label>
-                        {{ form.text }}<br>
-
-                        <label>Тип поста!</label>
+                        <label>Тип поста</label>
                         {{ form.type }}
                         <hr>
 
@@ -41,6 +45,16 @@
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"><label>Файл</label>{{ form.file }}<br>
                             </div>
                         </div>
+                        <hr>
+
+                        <label>Описание</label>
+                        <div id="flexarea">
+                            {{ form.text }}
+                        </div>
+                        <input id="isMarkdownLive" type="checkbox">
+                        <label for="isMarkdownLive">Markdown LIVE</label><br>
+
+                        <div id="markdownLive" style="display: none"></div>
 
                     </div>
 
@@ -56,4 +70,8 @@
     </div>
 
 
+{% endblock %}
+
+{% block js %}
+    <script src="{% static 'js/toMarkdown.js' %}"></script>
 {% endblock %}
