--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -33,7 +33,7 @@
                         <p>{{ post.text }}</p>
                     </div>
                     {% if post.image %}
-                        <img src="{{ post.image.url }}" class="post-image">
+                        <img src="{{ post.image.url }}" class="post-img">
                     {% endif %}
                     {% if post.link %}
                         <a href="{{ post.link }}">
