--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -45,7 +45,7 @@
                 </div>
 
                 {% if post.image %}
-                    <img src="{{ post.image.url }}" class="post-image">
+                    <img src="{{ post.image.url }}" class="post-img">
                 {% endif %}
 
                 {% if post.link %}
